# monorepo

./: .REVIEWERS  .bazelignore  .bazelrc  .envrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  flake.nix  gazelle_python.yaml  go.mod  go.sum
.github/: .REVIEWERS
.github/workflows/: bazel.yml  gerrit_dispatch.yml  test.yml
bazel/go/tools/: tools.go
go/: .REVIEWERS
go/server/: .REVIEWERS  BUILD.bazel  main.go
go/server/service/: BUILD.bazel  service.go
nogo/: .REVIEWERS  BUILD.bazel  lib.bzl
proto/: .REVIEWERS  BUILD.bazel  test.proto
py/: .REVIEWERS
py/client/: .REVIEWERS  BUILD.bazel  __main__.py  client.py
py/fine/: .REVIEWERS  BUILD.bazel  mod1.py  mod2.py  mod3.py
py/fine/init/: BUILD.bazel  __init__.py  consts.py  rexport.py
py/module/: BUILD.bazel  mod.py
repro/subdir/mod/: BUILD.bazel  mod.go  mod_test.go
tools/: .REVIEWERS  gopackagesdriver.sh
