load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier", "buildifier_test")

# gazelle:prefix github.com/DolceTriade/monorepo
gazelle(
    name = "gazelle",
    visibility = ["//visibility:public"],
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=third_party/go/deps.bzl%go_third_party_deps",
        "-prune",
    ],
    command = "update-repos",
)

alias(
    name = "gofmt",
    actual = "//nogo/analyzers/gofumpt:gofumptall",
)

buildifier(
    name = "buildifier",
)

buildifier_test(
    name = "buildifier_test",
    no_sandbox = True,
    workspace = ":WORKSPACE.bazel",
)

exports_files(srcs = ["WORKSPACE.bazel"])
