workspace(
    name = "monorepo",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "io_bazel_rules_go",
    sha256 = "de7974538c31f76658e0d333086c69efdf6679dbc6a466ac29e65434bf47076d",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.45.0/rules_go-v0.45.0.zip",
        "https://github.com/bazelbuild/rules_go/releases/download/v0.45.0/rules_go-v0.45.0.zip",
    ],
)

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")

go_rules_dependencies()

go_register_toolchains(version = "1.21.5")

go_register_toolchains(nogo = "@//nogo:lint")

http_archive(
    name = "bazel_gazelle",
    integrity = "sha256-MpOL2hbmcABjA1R5Bj2dJMYO2o15/Uc5Vj9Q0zHLMgk=",
    urls = [
        "https://github.com/bazelbuild/bazel-gazelle/releases/download/v0.35.0/bazel-gazelle-v0.35.0.tar.gz",
    ],
)

load("//third_party/go:deps.bzl", "go_third_party_deps")

# Our deps always go first, so we can override deps of other dependencies.
# In bazel, the first declaration of a dep "wins", so make sure our deps which work
# for the versions we want are used.
# gazelle:repository_macro third_party/go/deps.bzl%go_third_party_deps
go_third_party_deps()

load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")

gazelle_dependencies(go_repository_default_config = "//:WORKSPACE.bazel")

# Go static analysis tool staticcheck.
http_archive(
    name = "com_github_sluongng_nogo_analyzer",
    sha256 = "a74a5e44751d292d17bd879e5aa8b40baa94b5dc2f043df1e3acbb3e23ead073",
    strip_prefix = "nogo-analyzer-0.0.2",
    urls = [
        "https://github.com/sluongng/nogo-analyzer/archive/refs/tags/v0.0.2.tar.gz",
    ],
)

# Nogo linter libraries
load("@com_github_sluongng_nogo_analyzer//staticcheck:deps.bzl", "staticcheck")

staticcheck()

load("@com_github_sluongng_nogo_analyzer//goci-lint/errcheck:deps.bzl", "errcheck_deps")

errcheck_deps()

load("@com_github_sluongng_nogo_analyzer//goci-lint/ineffassign:deps.bzl", "ineffassign_deps")

ineffassign_deps()

load("@com_github_sluongng_nogo_analyzer//goci-lint/prealloc:deps.bzl", "prealloc_deps")

prealloc_deps()
