load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "test_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/DolceTriade/monorepo/proto",
    proto = ":test_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":test_go_proto"],
    importpath = "github.com/DolceTriade/monorepo/proto",
    visibility = ["//visibility:public"],
)
