load("@build_stack_rules_proto//rules/py:grpc_py_library.bzl", "grpc_py_library")
load("@build_stack_rules_proto//rules/py:proto_py_library.bzl", "proto_py_library")
load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "test_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/DolceTriade/monorepo/proto",
    proto = ":test_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":test_go_proto"],
    importpath = "github.com/DolceTriade/monorepo/proto",
    visibility = ["//visibility:public"],
)

grpc_py_library(
    name = "test_grpc_py_library",
    srcs = ["test_pb2_grpc.py"],
    visibility = ["//visibility:public"],
    deps = [":test_py_library"],
)

proto_compile(
    name = "test_python_compile",
    outputs = [
        "test_pb2.py",
        "test_pb2_grpc.py",
    ],
    plugins = [
        "@build_stack_rules_proto//plugin/builtin:python",
        "@build_stack_rules_proto//plugin/grpc/grpc:protoc-gen-grpc-python",
    ],
    proto = "test_proto",
)

proto_py_library(
    name = "test_py_library",
    srcs = ["test_pb2.py"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:protobuf_python"],
)
