load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@rules_appimage//appimage:appimage.bzl", "appimage")

appimage(
    name = "client.appimage",
    binary = ":client_bin",
    build_args = [
        "-comp",
        "zstd",
        "-Xcompression-level",
        "16",
    ],
)

py_library(
    name = "client_py",
    srcs = ["client.py"],
    imports = ["../.."],
    visibility = ["//visibility:public"],
    deps = [
        "//proto:test_grpc_py_library",
        "//proto:test_py_library",
        "@pip_grpcio//:pkg",
    ],
)

py_binary(
    name = "client_bin",
    srcs = ["__main__.py"],
    imports = ["../.."],
    main = "__main__.py",
    visibility = ["//visibility:public"],
    deps = [
        ":client_py",
        "@pip_argparse//:pkg",
    ],
)
