load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "init_py",
    srcs = ["__init__.py"],
    imports = ["../.."],
    visibility = ["//visibility:public"],
)

py_library(
    name = "mod1_py",
    srcs = ["mod1.py"],
    imports = ["../.."],
    visibility = ["//visibility:public"],
)

py_library(
    name = "mod2_py",
    srcs = ["mod2.py"],
    imports = ["../.."],
    visibility = ["//visibility:public"],
    deps = ["@pip_argparse//:pkg"],
)

py_library(
    name = "mod3_py",
    srcs = ["mod3.py"],
    imports = ["../.."],
    visibility = ["//visibility:public"],
)
