load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "init_py",
    srcs = ["__init__.py"],
    imports = ["../.."],
    visibility = ["//visibility:public"],
)

py_library(
    name = "mod_py",
    srcs = ["mod.py"],
    imports = ["../.."],
    visibility = ["//visibility:public"],
)
