load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/DolceTriade/monorepo/go/server/service",
    visibility = ["//visibility:public"],
    deps = [
        "//proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_zap//:zap",
    ],
)
